applyforjobs and int work updated

--- a/applicant-server/views/internship-list.ejs
+++ b/applicant-server/views/internship-list.ejs
@@ -268,7 +268,7 @@
                                 </div>
                             <% } %>
                         
-                            <form action="/applyforJobs/<%= int._id %>" method="POST">
+                            <form action="/applyforInternships/<%= int._id %>" method="POST">
                                 <button type="submit"
                                 class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-md text-sm font-semibold transition-colors">
                                 Apply Now
