--- a/applicant-server/views/job-list.ejs
+++ b/applicant-server/views/job-list.ejs
@@ -305,7 +305,7 @@
                   <%= job.jobSalary %> LPA
                 </div>
               <% } %>
-              
+              <% console.log(job._id);%>
               <form action="/applyforJobs/<%= job._id %>" method="POST">
                 <button type="submit"
                   class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-md text-sm font-semibold transition-colors">
