--- a/applicant-server/views/edit-profile.ejs
+++ b/applicant-server/views/edit-profile.ejs
@@ -127,31 +127,31 @@
                             <div class="bg-blue-50 p-4 rounded-lg">
                                 <label class="block text-sm font-medium text-blue-700">First Name</label>
                                 <input type="text" name="firstName" value="<%= user.firstName %>"
-                                    class="mt-1 block w-full border border-blue-300 rounded-md py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500">
+                                    class="mt-1 block text-black w-full border border-blue-300 rounded-md py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                             </div>
 
                             <div class="bg-blue-50 p-4 rounded-lg">
                                 <label class="block text-sm font-medium text-blue-700">Last Name</label>
                                 <input type="text" name="lastName" value="<%= user.lastName %>"
-                                    class="mt-1 block w-full border border-blue-300 rounded-md py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500">
+                                    class="mt-1 block text-black w-full border border-blue-300 rounded-md py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                             </div>
 
                             <div class="bg-blue-50 p-4 rounded-lg">
                                 <label class="block text-sm font-medium text-blue-700">Email Address</label>
                                 <input type="email" name="email" value="<%= user.email %>"
-                                    class="mt-1 block w-full border border-blue-300 rounded-md py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500">
+                                    class="mt-1 block text-black w-full border border-blue-300 rounded-md py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                             </div>
 
                             <div class="bg-blue-50 p-4 rounded-lg">
                                 <label class="block text-sm font-medium text-blue-700">Phone Number</label>
                                 <input type="tel" name="phone" value="<%= user.phone %>"
-                                    class="mt-1 block w-full border border-blue-300 rounded-md py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500">
+                                    class="mt-1 block text-black w-full border border-blue-300 rounded-md py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                             </div>
 
                             <div class="bg-blue-50 p-4 rounded-lg">
-                                <label class="block text-sm font-medium text-blue-700">Gender</label>
+                                <label class="block text-black text-sm font-medium text-blue-700">Gender</label>
                                 <select name="gender"
-                                    class="mt-1 block w-full border border-blue-300 rounded-md py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500">
+                                    class="mt-1 block text-black w-full border border-blue-300 rounded-md py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                                     <option value="male" <%=user.gender==='male' ? 'selected' : '' %>>Male</option>
                                     <option value="female" <%=user.gender==='female' ? 'selected' : '' %>>Female
                                     </option>
